--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 250px;
+    width: 300px;
     height: 100vh;
     background-color: #ffffff;
     float: left;
@@ -16,7 +16,7 @@
     align-items: center;
     border-radius: 15px; /* 모서리 둥글게 */
     border-color: #808080;
-    width: 100%;
+    width: 90%;
     padding: 5px;
     background-color: #f2f2f2; 
     color: rgba(0, 0, 0, 0.7); /* 반투명 */
@@ -24,18 +24,19 @@
   }
 
   .search-button{
+    position: relative;
     order: 1;
     width: 16%;
     height: 20px;
-    background-color: #f2f2f2;
     border:none;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
     font-size:1em;
-    color:#f2f2f2;
     outline:none;
     display:inline;
     margin-left: 10px;
     box-sizing: border-box;
+    top: -3px;
+    left: -2px;
   }
   .search-button{
     background-color: #f2f2f2;
@@ -96,8 +97,8 @@
     background-color: #4285f4; /* 마우스 호버 시 배경색을 파란색으로 변경 */
   }
   .sidebar-main {
-    width: 250px;
-    height: 70%;
+    width: 300px;
+    height: 50%;
     background-color: #ffffff;
     float: left;
   }
