--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -7,13 +7,14 @@
   
 
   .main-content-ig {
-    margin-left: 270px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
+    margin-left: 300px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
     margin-top: 0;
     height: 100vh;
   }
   .search-container {
     display: flex; 
     align-items: center;
+    justify-content: center;
     border-radius: 15px; /* 모서리 둥글게 */
     border-color: #808080;
     width: 90%;
@@ -21,6 +22,7 @@
     background-color: #f2f2f2; 
     color: rgba(0, 0, 0, 0.7); /* 반투명 */
     margin-bottom: 15px;
+    
   }
 
   .search-button{
@@ -43,7 +45,7 @@
   }
   .search-input{
     order: 2;
-    width:84%;
+    width:85%;
     height:100%;
     border:none;
     font-size:1em;
@@ -53,6 +55,7 @@
     outline:none;
     box-sizing: border-box;
     background-color: #f2f2f2;
+    
   }
   .search-history-container {
     position: relative;
@@ -61,6 +64,7 @@
   .search-history{
     display: inline-block;
     max-width: 350px;
+    align-items: center;
 
   }
   .search-record{
