--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -4,13 +4,12 @@
     background-color: #ffffff;
     float: left;
   }
-  
-
-  .main-content-ig {
-    margin-left: 300px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
-    margin-top: 0;
-    height: 100vh;
+  .main-content {
+    margin-left: 380px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
+    margin-top: 0; 
+    display: 'flex'
   }
+
   .search-container {
     display: flex; 
     align-items: center;
@@ -167,6 +166,100 @@
     color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
   }
   .sidebar-footer > *:nth-child(6) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar {
+    width: 300px;
+    height: 100vh;
+    background-color: #ffffff;
+    float: left;
+  }
+
+  .mpsidebar-menu {
+    width: 300px;
+    height: 70%;
+    background-color: #ffffff;
+    
+  }
+
+
+  .mpsidebar-main {
+    position: fixed;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 20%;
+    background-color: #ffffff;
+    float: left;
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .mpsidebar-footer {
+    
+    margin-top: auto;
+    width: 300px;
+    height: 200px;
+    background-color: #f2f2f2;
+    display: grid;
+    grid-template-rows: 2fr 2fr 1.5fr 1.5fr 1.5fr 1.5fr;
+    grid-gap: 1px; /* 기본 열 사이의 간격은 1px */
+    overflow: hidden;
+    
+  }
+  .mpsidebar-footer > * {
+    border-bottom: 1px solid black; /* 구분선의 색상을 검은색(#000)으로 설정 */
+    
+  }
+  
+  .mpsidebar-footer > *:nth-child(1) {
+    position: relative;
+    margin-top: 2px;
+    font-size: 20px;
+    font-weight: bold;
+    left: -160px;
+    right: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: black;
+    
+  }
+  .mpsidebar-footer > *:nth-child(2) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(3) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(4) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(5) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(6) {
     position: relative;
     left: 50px;
     right: 0;
