--- a/styles/MpSideBar.css
+++ b/styles/MpSideBar.css
@@ -14,6 +14,7 @@
     flex-direction: column;
   }
   .sidebar-footer {
+    position: fixed;
     margin-top: auto;
     width: 300px;
     height: 200px;
@@ -71,6 +72,76 @@
     color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
   }
   .sidebar-footer > *:nth-child(6) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+
+
+
+
+
+  .mpsidebar-footer {
+    position: fixed;
+    margin-top: auto;
+    width: 300px;
+    height: 200px;
+    background-color: #f2f2f2;
+    display: grid;
+    grid-template-rows: 2fr 2fr 1.5fr 1.5fr 1.5fr 1.5fr;
+    grid-gap: 1px; /* 기본 열 사이의 간격은 1px */
+    overflow: hidden;
+    
+  }
+  .mpsidebar-footer > * {
+    border-bottom: 1px solid black; /* 구분선의 색상을 검은색(#000)으로 설정 */
+    
+  }
+  
+  .mpsidebar-footer > *:nth-child(1) {
+    position: relative;
+    margin-top: 2px;
+    font-size: 20px;
+    font-weight: bold;
+    left: -160px;
+    right: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: black;
+    
+  }
+  .mpsidebar-footer > *:nth-child(2) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(3) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(4) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(5) {
+    position: relative;
+    left: 50px;
+    right: 0;
+    margin-top: auto;
+    color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
+  }
+  .mpsidebar-footer > *:nth-child(6) {
     position: relative;
     left: 50px;
     right: 0;
