--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -266,3 +266,9 @@
     margin-top: auto;
     color: black; /* 두 번째 줄을 아래쪽에 위치시키기 위해 margin-top을 auto로 설정 */
   }
+  #mynetwork {
+    width: 600px;
+    height: 400px;
+    border: 1px solid lightgray;
+  }
+  
