--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -271,4 +271,9 @@
     height: 400px;
     border: 1px solid lightgray;
   }
+  #mynetwork_2 {
+    width: 600px;
+    height: 400px;
+    border: 1px solid lightgray;
+  }
   
