--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -5,13 +5,13 @@
     float: left;
   }
   .main-content {
-    margin-left: 380px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
-    margin-top: 0; 
+    margin-left: 400px;/* 사이드바의 너비만큼 왼쪽 여백을 주어 메인 콘텐츠를 이동시킴 */
+    margin-top: 700px; 
     display: 'flex'
   }
 
   .search-container {
-    display: flex; 
+    display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 15px; /* 모서리 둥글게 */
@@ -21,6 +21,7 @@
     background-color: #f2f2f2; 
     color: rgba(0, 0, 0, 0.7); /* 반투명 */
     margin-bottom: 15px;
+    margin-left: 15px;
     
   }
 
@@ -64,7 +65,12 @@
     display: inline-block;
     max-width: 350px;
     align-items: center;
-
+    margin-left: 15px;
+  }
+  .search-record-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /* search-record가 너비를 벗어나면 줄 바꿈이 되도록 함 */
   }
   .search-record{
     border: 1px solid #ccc;
@@ -102,7 +108,7 @@
   .sidebar-main {
   
     width: 300px;
-    height: 83%;
+    height: 80%;
     background-color: #ffffff;
     float: left;
     display: flex;
@@ -193,7 +199,7 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 20%;
+    height: 28%;
     background-color: #ffffff;
     float: left;
     display: flex;
