--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -110,7 +110,7 @@
   }
   
   .suggested-item:hover {
-    background-color: 'skyblue'; /* 마우스 호버 시 배경색을 파란색으로 변경 */
+    background-color: skyblue; /* 마우스 호버 시 배경색을 파란색으로 변경 */
   }
   .sidebar-main {
     flex-shrink: 0;
