--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -1,24 +1,15 @@
 .sidebar {
-  /* border: solid blue; */
     display: flex;
     flex-direction: column;
     width: 300px;
     height: calc(100vh - 76px); /* 뷰포트의 높이에서 NavBar의 높이(76px)를 뺀 값으로 높이 설정 */
-    /* height: 90vh; */
-    background-color: #ffffff;
+    background-color: #363739;
     float: left;
     overflow: hidden;
     box-shadow: '4px 4px 4px 4px rgba(0, 0, 0, 0.2)' ,
   }
   
-  /* .main-content {
-    margin-left: 400px;
-    margin-top: 700px; 
-    display: 'flex'
-  } */
-
   .search-container {
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +23,6 @@
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: 15px;
-    
   }
 
   .search-button{
@@ -41,7 +31,6 @@
     width: 16%;
     height: 20px;
     border:none;
-    /* background-color: #f2f2f2; */
     font-size:1em;
     outline:none;
     display:inline;
@@ -124,7 +113,7 @@
     flex-shrink: 0;
     width: 300px;
     height: 50%;
-    background-color: #ffffff;
+    background-color: #363739;
     float: left;
     display: flex;
     flex-direction: column;
@@ -133,57 +122,27 @@
 
 
 /*  여기는 마이페이지 관련  */
-
-
-
-
   .mpsidebar {
     display: flex;
     flex-direction: column;
     width: 300px;
     height: calc(100vh - 76px); 
-    background-color: #ffffff;
+    background-color: #363739;
     float: left;
     overflow: hidden;
     box-shadow: '4px 4px 4px 4px rgba(0, 0, 0, 0.2)' ,
   }
-
-  .mpsidebar-menu {
-    border: '1px solid red';
-    width: 300px;
-    height: 62%;
-    background-color: #ffffff;
-    
-  }
-
-
-  /* .mpsidebar-main {
-    position: fixed;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 28%;
-    background-color: #ffffff;
-    float: left;
-    display: flex;
-    flex-direction: column;
-  } */
   .mpsidebar-main {
     flex-shrink: 0;
     width: 300px;
     height: 50%;
-    background-color: #ffffff;
+    background-color: #363739;
     float: left;
     display: flex;
     flex-direction: column;
   }
   
 /* 아래는 footer 관련 공통 부분 */
-
-
-
-
   .additional_menu {
     position: absolute;
     bottom: 2%;
@@ -194,6 +153,7 @@
     font-size: 14px;
     text-align: center;
     padding: 10px;
+    /* background-color: #e7e7e7; */
     background-color: #e7e7e7;
     border-radius: 10px;
     display: flex;
@@ -230,62 +190,5 @@
     gap: 30px;
 }
 
-
-
-  /* .mpsidebar-footer {
-    position: fixed;
-    margin-top: auto;
-    z-index: 500;
-    bottom: 0;
-    width: 300px;
-    height: 105px;
-    background-color: #f2f2f2;
-    display: grid;
-    grid-template-rows: 2fr 2fr 1.5fr 1.5fr 1.5fr 1.5fr;
-    grid-gap: 1px; /* 기본 열 사이의 간격은 1px 
-    overflow: hidden;
-    
-  }
-  .mpsidebar-footer > * {
-    border-bottom: 1px solid white; // 구분선의 색상을 검은색(#000)으로 설정 
-    
-  }
-  
-  .mpsidebar-footer > *:nth-child(1) {
-    position: relative;
-    margin-top: 2px;
-    font-size: 20px;
-    font-weight: bold;
-    left: -160px;
-    right: 0px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: black;
-    
-  }
-  .mpsidebar-footer > *:nth-child(2) {
-    position: relative;
-    left: 50px;
-    right: 0;
-    margin-top: auto;
-    color: black; 
-  }
-  .mpsidebar-footer > *:nth-child(3) {
-    position: relative;
-    left: 50px;
-    right: 0;
-    margin-top: auto;
-    color: black;         
-  }
-  .mpsidebar-footer > *:nth-child(4) {
-    position: relative;
-    left: 50px;
-    right: 0;
-    margin-top: auto;
-    color: black;    
-    font-size: 13px;
-  } */
-  
 
   
