--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,11 @@ body {
 .outer::-webkit-scrollbar {
     display: none;
 }
+
+
+@font-face {
+  font-family: 'KOTRA_GOTHIC';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/KOTRA_GOTHIC.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
