--- a/styles/Sidebar.css
+++ b/styles/Sidebar.css
@@ -77,7 +77,7 @@
   .search-record{
     border: 1px solid #ccc;
     padding: 2px 5px;
-    border-radius: 10px;
+    border-radius: 15px;
     margin: 0 8px;
   }
   
@@ -86,33 +86,39 @@
     top: -10px;
     left: 0;
     z-index: 2;
-    margin-top: 5px;
-    background: white;
-    padding: 0 5px;
+    margin-top:-5px;
+    background: rgba(241, 241, 241);
+    padding: 5px;
     height:300px;
-    width: 250px;
-    margin-left: 20px;
+    width: 90%;
+    margin-left: 15px;
     border: 1px solid black;
     overflow: auto;
+    border-radius: 20px;
+    box-shadow: 0px 4px 6px rgba(94, 172, 242, 0.2);
   }
   .suggested-item {
     padding: 10px;
     margin-bottom: 8px;
-    background-color: #f1f1f1;
-    color: #333;
+    background-color: rgba(241, 241, 241, 0);
+    
+    color: black;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   .suggested-item:hover {
-    background-color: skyblue; /* 마우스 호버 시 배경색을 파란색으로 변경 */
+    background-color: #5eacf2; /* 마우스 호버 시 배경색을 파란색으로 변경 */
   }
 
   .search-record:hover {
-    background-color: skyblue; /* hover됐을 때의 배경색 */
+    background-color: #5eacf2; /* hover됐을 때의 배경색 */
     cursor: pointer;
   }
+
+
+
   .sidebar-main {
     /* border:solid red; */
     flex-shrink: 0;
